--- a/src/main/java/GUI/MenuAdm.form
+++ b/src/main/java/GUI/MenuAdm.form
@@ -23,13 +23,95 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="45" pref="45" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnEditarUsuario" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnCadastrarNovoUsuario" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnListarUsuarios" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnExcluirUsuario" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnLogout" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="13" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnCadastrarOrdem" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnListarOrdem" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnDesativarOrdem" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
+              <Component id="btnCadastrarNovoUsuario" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btnEditarUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnCadastrarOrdem" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btnExcluirUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnListarOrdem" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btnListarUsuarios" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnDesativarOrdem" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="btnLogout" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="37" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JButton" name="btnCadastrarNovoUsuario">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cadastrar novo usuario"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnEditarUsuario">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Editar usuario"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnExcluirUsuario">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Excluir usuario"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnListarUsuarios">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Listar usuarios"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnCadastrarOrdem">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cadastrar ordem de servi&#xe7;o"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnListarOrdem">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Listar ordens de servi&#xe7;o"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnDesativarOrdem">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Desativar ordem de servi&#xe7;o"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnLogout">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Logout"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLogoutActionPerformed"/>
+      </Events>
+    </Component>
+  </SubComponents>
 </Form>
