--- a/src/main/java/Cliente/GUI/MenuAdm.form
+++ b/src/main/java/Cliente/GUI/MenuAdm.form
@@ -36,7 +36,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnCadastrarOrdem" min="-2" max="-2" attributes="0"/>
                   <Component id="btnListarOrdem" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnDesativarOrdem" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnAlterarOrdem" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -60,7 +60,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnListarUsuarios" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnDesativarOrdem" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnAlterarOrdem" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnLogout" min="-2" max="-2" attributes="0"/>
@@ -102,11 +102,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Listar ordens de servi&#xe7;o"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnListarOrdemActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnDesativarOrdem">
+    <Component class="javax.swing.JButton" name="btnAlterarOrdem">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Desativar ordem de servi&#xe7;o"/>
+        <Property name="text" type="java.lang.String" value="Alterar Ordem de Servi&#xe7;o"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAlterarOrdemActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnLogout">
       <Properties>
